[gd_scene load_steps=10 format=3 uid="uid://rfu285g41yq4"]

[ext_resource type="Script" uid="uid://cikw84civ1wcy" path="res://upgrade_box.gd" id="1_2166m"]
[ext_resource type="AudioStream" uid="uid://cn5bsnh075duc" path="res://cash-register-fake-88639.mp3" id="2_h7fpx"]
[ext_resource type="Texture2D" uid="uid://b66r7he7nuj55" path="res://icon.svg" id="2_up8vd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2166m"]
bg_color = Color(0.85098, 0.631373, 0.443137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_up8vd"]
bg_color = Color(0.85098, 0.631373, 0.443137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h7fpx"]
bg_color = Color(0.85098, 0.631373, 0.443137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6xcta"]
bg_color = Color(0.85098, 0.631373, 0.443137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ff638"]
bg_color = Color(0.85098, 0.631373, 0.443137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yyfdf"]
bg_color = Color(0.85098, 0.631373, 0.443137, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
corner_detail = 6

[node name="UpgradeBox" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 308.0
offset_bottom = 100.0
script = ExtResource("1_2166m")
click = ExtResource("2_h7fpx")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.901961, 0.584314, 1)

[node name="img" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -30.0
offset_right = 80.0
offset_bottom = 42.0
grow_vertical = 2
texture = ExtResource("2_up8vd")
expand_mode = 1

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
text = "Item"
horizontal_alignment = 1

[node name="ValueText" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 27.0
offset_right = 192.0
offset_bottom = 44.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 9
text = "Value:"
horizontal_alignment = 1

[node name="Value" type="Label" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 44.0
offset_right = 128.0
offset_bottom = 58.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 8
text = "xBP"
horizontal_alignment = 1

[node name="BuyValue" type="Button" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 44.0
offset_right = 184.0
offset_bottom = 57.0
theme_override_colors/font_color = Color(1, 0.901961, 0.584314, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxFlat_2166m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_up8vd")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7fpx")
text = "+ Value"

[node name="SuccessText" type="Label" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 27.0
offset_right = 307.0
offset_bottom = 42.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 9
text = "Success:"
horizontal_alignment = 1

[node name="Success" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 44.0
offset_right = 236.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 8
text = "xPB"
horizontal_alignment = 1

[node name="BuySuccess" type="Button" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 44.0
offset_right = 303.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(1, 0.901961, 0.584314, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxFlat_6xcta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ff638")
theme_override_styles/normal = SubResource("StyleBoxFlat_yyfdf")
text = "+ Success"

[node name="WeightText" type="Label" parent="."]
layout_mode = 0
offset_left = 78.0
offset_top = 62.0
offset_right = 192.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 9
text = "Value:"
horizontal_alignment = 1

[node name="Weight" type="Label" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 79.0
offset_right = 128.0
offset_bottom = 93.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 8
text = "xBP"
horizontal_alignment = 1

[node name="BuyWeight" type="Button" parent="."]
layout_mode = 0
offset_left = 133.0
offset_top = 79.0
offset_right = 184.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(1, 0.901961, 0.584314, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxFlat_2166m")
theme_override_styles/pressed = SubResource("StyleBoxFlat_up8vd")
theme_override_styles/normal = SubResource("StyleBoxFlat_h7fpx")
text = "- Weight"

[node name="SpecialText" type="Label" parent="."]
layout_mode = 0
offset_left = 193.0
offset_top = 62.0
offset_right = 307.0
offset_bottom = 77.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 9
text = "Success:"
horizontal_alignment = 1

[node name="Special" type="Label" parent="."]
layout_mode = 0
offset_left = 192.0
offset_top = 79.0
offset_right = 236.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0.858824, 0.647059, 0.45098, 1)
theme_override_font_sizes/font_size = 8
text = "xPB"
horizontal_alignment = 1

[node name="BuySpecial" type="Button" parent="."]
layout_mode = 0
offset_left = 238.0
offset_top = 79.0
offset_right = 303.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(1, 0.901961, 0.584314, 1)
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxFlat_6xcta")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ff638")
theme_override_styles/normal = SubResource("StyleBoxFlat_yyfdf")
text = "+ Special"

[connection signal="pressed" from="BuyValue" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="BuySuccess" to="." method="_on_add_pressed"]
[connection signal="pressed" from="BuyWeight" to="." method="_on_buy_weight_pressed"]
[connection signal="pressed" from="BuySpecial" to="." method="_on_buy_special_pressed"]
